--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -2390,3 +2390,197 @@
   width: 46px;
   margin-right: 20px;
 }
+.minH600 {
+  min-height: 600px;
+  .course-body-box {
+    min-height: 600px;
+    background-color: #fff;
+  }
+}
+.pronunciation-item {
+  ul {
+    margin-top: 200px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+  }
+  li {
+    width: 88px;
+    line-height: 44px;
+    text-align: center;
+    font-size: 16px;
+    color: #333;
+    float: left;
+    font-weight: 600;
+    display: inline-block;
+    img {
+      display: block;
+      height: auto;
+      width: 100%;  
+    }
+    &:first-child {
+      margin-right: 110px;
+    }
+  }
+  .pronunciation-tit {
+    margin-top: 70px;
+    display: block;
+    overflow: hidden;
+    text-align: center;
+    img {
+      width: 209px;
+      height: 165px;
+    }
+  }
+  &.pronunciation-item-2 {
+    ul {
+      margin-top: 38px;
+      &:first-child {
+        margin-top: 60px;
+        li {
+          margin-right: 88px;
+          &:last-child {
+            margin-right: 0;
+          }
+        }
+      }
+    }
+    .pronunciation-tit {
+      margin-top: 40px;
+    }
+  }
+  &.pronunciation-item-3 {
+    ul {
+      margin-top: 30px;
+      &:first-child {
+        margin-top: 79px;
+      }
+      li {
+        margin-right: 50px;
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+    }
+    .pronunciation-tit {
+      margin-top: 30px;
+    } 
+  }
+  &.pronunciation-item-4 {
+    li {
+      width: 100px;
+      img {
+        width: 88px;
+      }
+    }
+  }
+}
+.xc_center {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0 !important;
+}
+.xc_center_wrap {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  height: auto !important;
+}
+.xc-location-box {
+  color: #333;
+  .xc-location-tit {
+    height: 28px;
+    font-size: 20px;
+    line-height: 28px;
+    font-weight: 600;
+  }
+}
+.xc-loctioan-pay-box {
+  margin: 10px 0;
+  img {
+    width: 50px;
+    height: auto;
+  }
+  line-height: 50px;
+  font-size: 14px;
+  color: #999;
+  .xc-loctioan-status {
+    margin-right: 10px;
+    color: #666666;
+  }
+  .xc-loctioan-pay {
+    display: inline-block;
+  }
+  .xc-loctioan-tit {
+    overflow: hidden;
+    color: #333333;
+    margin-top: 10px;
+  }
+  .xc-location-p {
+    color: #333333;
+    font-size: 16px;
+    line-height: 22px;
+  }
+}
+.xc-loctioan-table {
+  table {
+    border-top: 1px solid #EBEBEB;
+    border-left: 1px solid #EBEBEB;
+    line-height: 40px;
+    text-align: center;
+    width: 100%;
+  }
+  th {
+    color: #666;
+    font-size: 16px;
+    font-weight: 600;
+    border-right: 1px solid #EBEBEB;
+    border-bottom: 1px solid #EBEBEB;
+    box-sizing: border-box;
+  }
+  tbody {
+    font-size: 14px;
+    color: #666;
+  }
+  tr {
+    border-bottom: 1px solid #EBEBEB;
+  }
+  td {
+    border-right: 1px solid #EBEBEB;
+    border-bottom: 1px solid #EBEBEB;
+    box-sizing: border-box;
+  }
+  &.small-table {
+    width: 660px;
+    th {
+      width: 330px;
+    }
+  }
+}
+.readText-example {
+  a {
+    display: inline-block;
+    background-color: #d8d4d4;
+    display: inline-block;
+    color: #333333;
+    border-radius: 8px;
+    width: 50px;
+    text-align: center;
+  }
+}
+.zpflex {
+  display: flex;
+  justify-content: space-between;
+  > div {
+    width: 370px;
+  }
+  .xc-coustom-pent + .xc-coustom-pent {
+    margin-top: 0;
+  }
+  .xc-review-img {
+    float: right;
+    margin-right: 20px;
+  }
+}
