--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -2413,6 +2413,9 @@
     float: left;
     font-weight: 600;
     display: inline-block;
+    a {
+      color: #333;
+    }
     img {
       display: block;
       height: auto;
