--- a/src/css/main_xc.css
+++ b/src/css/main_xc.css
@@ -2445,9 +2445,9 @@
     font-weight: 600;
     display: inline-block;
   }
-.pronunciation-item li a{
-  color: #333;
-}
+.pronunciation-item li a {
+      color: #333;
+    }
 .pronunciation-item li img {
       display: block;
       height: auto;
@@ -2614,3 +2614,6 @@
     float: right;
     margin-right: 20px;
   }
+.xc-red {
+  color: red;
+}
