--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -994,6 +994,8 @@
 
         .course-untiy-name {
           float: left;
+          color: #666;
+          font-size: 1.6rem;
         }
 
         .course-body-untiy {
@@ -1008,6 +1010,9 @@
           &.active {
             background: #EAF1F6;
             color: #0085E6;
+            .course-untiy-name {
+              color: #0085E6;
+            }
           }
         }
 
