--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -2380,6 +2380,8 @@
 }
 .readText-example span.txt {
   font-size: 16px;
+  word-spacing: 16px;
+  color: #666666;
 }
 .readText-listen{
   font-size: 14px;
@@ -2589,4 +2591,17 @@
 }
 .xc-red {
   color: red;
+}
+.perview-left-width {
+  width: 500px;
+}
+.xc-practice-img {
+  display: inline-block;
+  width: 36px;
+  height: auto;
+  vertical-align: top;
+  margin-top: 26px;
+}
+.xc-practice-true {
+  color: #666666;
 }
