--- a/src/css/main_xc.css
+++ b/src/css/main_xc.css
@@ -2408,6 +2408,8 @@
 }
 .readText-example span.txt {
   font-size: 16px;
+  word-spacing: 16px;
+  color: #666666;
 }
 .readText-listen{
   font-size: 14px;
@@ -2616,4 +2618,17 @@
   }
 .xc-red {
   color: red;
+}
+.perview-left-width {
+  width: 500px;
+}
+.xc-practice-img {
+  display: inline-block;
+  width: 36px;
+  height: auto;
+  vertical-align: top;
+  margin-top: 26px;
+}
+.xc-practice-true {
+  color: #666666;
 }
