--- a/src/css/app.css
+++ b/src/css/app.css
@@ -5131,6 +5131,7 @@ x:-o-prefocus,
   font-size: 12px;
   list-style: none;
   color: #f05050;
+  text-align: left;
 }
 /* ========================================================================
    Component: form-tags.less
