大通关flexbug 添加倒计时效果
大通关flexbug 添加倒计时效果

--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -2583,8 +2583,11 @@
 .zpflex {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+  padding-bottom: 0px !important;
   > div {
     width: 370px;
+    margin-bottom: 30px;
   }
   .xc-coustom-pent + .xc-coustom-pent {
     margin-top: 0;
