--- a/src/css/main_xc.css
+++ b/src/css/main_xc.css
@@ -2612,9 +2612,13 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding-bottom: 0px !important;
 }
 .zpflex > div {
     width: 370px;
+    margin-bottom: 30px;
   }
 .zpflex .xc-coustom-pent + .xc-coustom-pent {
     margin-top: 0;
