--- a/src/less/main_momo.less
+++ b/src/less/main_momo.less
@@ -478,7 +478,7 @@
   color: rgba(255, 255, 255, 1);
   line-height: 30px;
   text-align: center;
-  margin: 0 auto;
+  margin: 0 auto !important;
   margin-top: 5px;
   cursor: pointer;
 }
