--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -2650,7 +2650,7 @@
 .xc-new-table {
   border: 1px solid #eeeeee;
   overflow-x: scroll;
-  height: 75vh;
+  height: 500px;
 }
 .xc-new-table ul {
   padding: 0;
