--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -2587,6 +2587,7 @@
   padding-bottom: 0px !important;
   > div {
     width: 370px;
+    height: 142px;
     margin-bottom: 30px;
   }
   .xc-coustom-pent + .xc-coustom-pent {
