--- a/src/css/main_xc.css
+++ b/src/css/main_xc.css
@@ -2618,6 +2618,7 @@
 }
 .zpflex > div {
     width: 370px;
+    height: 142px;
     margin-bottom: 30px;
   }
 .zpflex .xc-coustom-pent + .xc-coustom-pent {
