--- a/src/css/main_xc.css
+++ b/src/css/main_xc.css
@@ -835,6 +835,8 @@ section {
 }
 .img-group-up {
   height: 200px;
+  width: 200px;
+  margin: 0 auto;
   border-radius: 8px;
   background-color: #f2f2f2;
   border: 1px dashed #666666
