--- a/src/css/theme-e.css
+++ b/src/css/theme-e.css
@@ -4,6 +4,7 @@
 body,
 .wrapper > section {
   background-color: #f5f7fa;
+  overflow-y: scroll;
 }
 .wrapper > .aside {
   background-color: #3a3f51;
