--- a/src/css/wj_teacher.css
+++ b/src/css/wj_teacher.css
@@ -219,7 +219,7 @@
     color: #656565;
   }
   .xc-table-body .active {
-    color: #999999;
+    color: #0099FF;
   }
   .xc-table-body .active > ul {
     display: block;
@@ -286,4 +286,13 @@
     width: 6px;
     height: 11px;
     border-radius: 6px 0 0 6px;
+  }
+  .maxcheckboxtable.table .checkbox{
+    width: auto;
+  }
+  .xc-table-body.big .one {
+    width: 33.333333333%;
+  }
+  .xc-table-body.big .one .two {
+    left: calc(100% / 3);
   }
