--- a/src/css/main_xc.css
+++ b/src/css/main_xc.css
@@ -235,6 +235,9 @@ section {
 .xc-tab .xc-read li{
   width: 60px;
 }
+.xc-tab .xc-tab-head li{
+  width: auto;
+}
 .xc-tab .xc-bas .active {
   color: #108EE9;
 }
