--- a/src/css/theme-e.css
+++ b/src/css/theme-e.css
@@ -5,6 +5,7 @@ body,
 .wrapper > section {
   background-color: #f5f7fa;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 .wrapper > .aside {
   background-color: #3a3f51;
