--- a/src/css/theme-e.css
+++ b/src/css/theme-e.css
@@ -5,7 +5,6 @@ body,
 .wrapper > section {
   background-color: #f5f7fa;
   overflow-y: scroll;
-  overflow-x: hidden;
 }
 .wrapper > .aside {
   background-color: #3a3f51;
@@ -159,8 +158,11 @@ body,
   background-color: #0085E6;
 }
 .content-wrapper {
-  min-width: 1500px !important;
+  min-width: 2000px !important;
   overflow: auto !important;
+}
+.table-responsive {
+  overflow-x: hidden !important;
 }
 .btn {
   margin-bottom: 5px !important;
