--- a/src/css/theme-e.css
+++ b/src/css/theme-e.css
@@ -167,3 +167,7 @@ body,
 .btn {
   margin-bottom: 5px !important;
 }
+.scseting {
+  min-width: auto !important;
+  overflow-x: hidden !important;
+}
