--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -1500,6 +1500,12 @@
     line-height: 28px;
     font-size: 20px;
     color: #0085e6;
+    .score {
+      color: #000;
+      .score-num {
+        color: red;
+      }
+    }
   }
   .intelText-close {
     position: absolute;
@@ -2626,6 +2632,9 @@
 }
 .xc-red {
   color: red;
+}
+.xc-blue {
+  color: #0085e6;
 }
 .perview-left-width {
   width: 500px;
