--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -2776,3 +2776,22 @@
   white-space: nowrap;
   overflow: hidden;
 }
+.xc-new-table.samll {
+  .xc-table-head li {
+    width: 25%;
+  }
+  .xc-table-body {
+    .one {
+      width: 25%;
+      border-right: 1px solid #eee;
+      box-sizing: border-box;
+    }
+    .two {
+      width: 25%;
+      left: 25%;
+      box-sizing: border-box;
+    }
+    .three {
+    }
+  }
+}
