--- a/src/css/style.css
+++ b/src/css/style.css
@@ -202,3 +202,9 @@ body {
 .midd_header > .login:hover ul{
   display: block;
 }
+
+.parsley-errors-list li {
+  font-size: 12px;
+  color: red;
+  padding-left: 10px;
+}
