--- a/src/css/main_xc.css
+++ b/src/css/main_xc.css
@@ -2952,7 +2952,7 @@
   border-radius: 4px;
 }
 .xc-proplay.small {
-  margin-bottom: 10px;
+  margin: 10px 0;
 }
 .xc-proplay.small .xc-proplay-outher{
   width: 890px;
