--- a/src/css/main_momo.css
+++ b/src/css/main_momo.css
@@ -813,7 +813,7 @@
   font-size: 14px;
   color: rgba(102, 102, 102, 1);
   line-height: 20px;
-  margin-bottom: 10px;
+  margin: 15px 0;
 }
 
 .word-mean > span {
