--- a/src/css/main_wj.css
+++ b/src/css/main_wj.css
@@ -817,17 +817,24 @@ button:focus {
           background: url('../img/playsound.png') no-repeat;
           background-size: cover;
 }
-
+.body-oralpractice .btn-ul li:nth-of-type(1) a.pause {
+  background-image: url('../img/playsound_active.png')
+}
 .body-oralpractice .btn-ul li:nth-of-type(2) a {
           background: url('../img/speak.png') no-repeat;
           background-size: cover;
 }
-
-.body-oralpractice .btn-ul li:nth-of-type(3) a {
-          background: url('../img/play.png') no-repeat;
-          background-size: cover;
+.body-oralpractice .btn-ul li:nth-of-type(2) a.active {
+  background: url('../img/speak_active.png');
 }
 
+.body-oralpractice .btn-ul li:nth-of-type(3) a {
+          background: url('../img/readText-play.png') no-repeat;
+          background-size: cover;
+}
+.body-oralpractice .btn-ul li:nth-of-type(3) a.pause {
+  background-image: url('../img/readText-play-active.png')
+}
 .body-oralpractice .btn-ul li.active .btn-txt {
           color: #0085e6;
 }
@@ -837,7 +844,7 @@ button:focus {
             background-size: cover;
 }
 
-.body-oralpractice .btn-ul li.active:nth-of-type(2) a {
+.body-oralpractice .btn-ul li:nth-of-type(2) a.active {
             background: url('../img/speak_active.png') no-repeat;
             background-size: cover;
 }
@@ -851,6 +858,7 @@ button:focus {
         font-size: 14px;
         color: #666;
         text-align: center;
+        display: block;
 }
 
 .body-wordfail .wrap {
