--- a/src/css/main_xc.css
+++ b/src/css/main_xc.css
@@ -3099,3 +3099,26 @@ xc-table-body li a {
   line-height: 36px;
   margin-bottom: 10px;
 }
+.masonry {
+  padding: 0 15px;
+  column-count: 3; column-gap: 15px;
+  margin-left: 0 !important;
+}
+.masonry-item {
+  margin-bottom: 15px;
+  break-inside: avoid; box-sizing: border-box; padding: 10px;
+  border-radius: 4px;
+  border: 1px solid #ebebeb;
+}
+.perview-left .enwords {
+  font-size: 0 !important;
+}
+.enwords span {
+  font-size: 62px;
+}
+.enwords span.active {
+  color: #0085E6;
+}
+.audio-items {
+  display: none;
+}
