课文跟读，逐句阅读
课文跟读，逐句阅读

--- a/src/css/main_xc.css
+++ b/src/css/main_xc.css
@@ -3138,3 +3138,10 @@ xc-table-body li a {
 .audio-items {
   display: none;
 }
+.readText-box-item .english {
+  display: none;
+  color: #0085E6;
+}
+.readText-box-item .playBtn {
+  display: inline-block;
+}
